# lucid-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HOW_IT_WORKS.md  README.md  ROADMAP.md  biome.json  bun.lockb  install.ps1  install.sh  lucid-memory.service  package.json  rustfmt.toml  uninstall.ps1  uninstall.sh
.cargo/: config.toml
.github/workflows/: build-native.yml  publish.yml
benchmarks/quality/: episodic-e2e.ts  realistic-dev.ts  token-efficiency.ts
crates/lucid-core/: Cargo.toml
crates/lucid-core/benches/: activation.rs  retrieval.rs
crates/lucid-core/examples/: basic_retrieval.rs  spreading_activation.rs
crates/lucid-core/src/: activation.rs  embedding.rs  lib.rs  location.rs  retrieval.rs  spreading.rs  visual.rs
crates/lucid-napi/: Cargo.toml  index.d.ts  lucid-native.darwin-arm64.node
crates/lucid-napi/src/: lib.rs
crates/lucid-perception-napi/src/: lib.rs
crates/lucid-perception/src/: error.rs  pipeline.rs  scene.rs  transcribe.rs  video.rs
