[package]
name = "lucid-core"
description = "Reconstructive memory retrieval engine using ACT-R spreading activation"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

keywords = ["memory", "retrieval", "act-r", "spreading-activation", "ai"]
categories = ["science", "algorithms"]

[features]
default = []
embedding = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:dirs", "dep:parking_lot"]

[dependencies]
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

# Embedding (optional, behind feature flag)
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "retrieval"
harness = false

[[bench]]
name = "activation"
harness = false

[lints]
workspace = true
