[package]
name = "lucid-napi"
description = "Node.js bindings for lucid-core memory retrieval engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lucid-core = { path = "../lucid-core" }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
